--- a/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/filter-menu/filter-menu.html
@@ -11,7 +11,7 @@
 
 			<li class="filter-item">
 
-				<div class="filter-button">
+				<button class="filter-button button" data-bind="tap: $root.handleDropdownClick.bind($root, $index())">
 					<span class="label" data-bind="html: label"></span>
 
 					<!-- ko template: {
@@ -20,7 +20,12 @@
 							direction: $root.Direction.DOWN
 						}
 					} --><!-- /ko -->
-				</div>
+
+					<!-- ko if: $root.selectedFiltersOptionCount()[$index()] -->
+						<div class="selected-tags-indicator" data-bind="html: $root.selectedFiltersOptionCount()[$index()]"></div>
+					<!-- /ko -->
+
+				</button>
 
 				<div class="filter-dropdown">
 					<div class="inner-content" data-bind="foreach: $root.filters()[$index()]">
@@ -35,7 +40,7 @@
 						onComplete: $root.controller.callbackCounter.get(),
 						options: {
 							action: {
-								event: (function(){console.log('click close')})
+								event: $root.handleCloseDropdownClick.bind($root, $index())
 							},
 							size: $root.ButtonSize.SMALL
 						}
