--- a/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-persona-selector.scss
@@ -9,12 +9,13 @@
 	.persona-content-wrapper {
 		overflow: hidden;
 
-		.background-triangle {
-			@include arrow(right, $colorWhite, $sizeGrid * 40);
-			@include pos(calc(50% + #{$sizeGrid * 2}), auto, auto, -$sizeGrid * 3);
-			transform: translateY(-50%);
-			position: absolute;
-		}
+	}
+
+	.background-triangle {
+		@include arrow(right, $colorWhite, $sizeGrid * 40);
+		@include pos(calc(50% + #{$sizeGrid * 2}), auto, auto, -$sizeGrid * 3);
+		transform: translateY(-50%);
+		position: absolute;
 	}
 
 	.persona-content {
@@ -32,10 +33,6 @@
 		.copy {
 			margin-bottom: $sizeGrid;
 		}
-	}
-
-	.persona {
-
 	}
 
 	.persona-options {
@@ -171,6 +168,94 @@
 			&:after {
 				transition: opacity #{$animationDuration} #{$ease};
 			}
+		}
+	}
+
+	.slider {
+		@include aspect-ratio(16px, 9px);
+		display: none;
+	}
+
+	.slider-viewport {
+		position: absolute;
+		width: 100%;
+		overflow: hidden;
+		padding: 0;
+		margin-bottom: $sizeGrid;
+		display: none;
+	}
+
+	.slides {
+		@extend %reset-list;
+		@include aspect-ratio(1160px, 600px);
+		white-space: nowrap;
+		font-size: 0;
+	}
+
+	.slide {
+		figure {
+			position: relative;
+
+			&:after {
+				@include pos(auto, 0, 0, auto);
+				@include triangle(right, bottom, $colorWhite, $sizeGrid);
+				position: absolute;
+				content: '';
+			}
+
+			&:before {
+				@include pos(auto, 0, 0, 0);
+				@include size(100%, 25%);
+				background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .25) 100%);
+				content: '';
+				position: absolute;
+			}
+		}
+
+		img {
+			@include size(100%);
+		}
+	}
+
+	.component-paginator-dashed {
+		@include pos(auto, 0, 0, 0);
+		position: absolute;
+		display: none;
+	}
+
+	@include respond-to(SMALL) {
+		&:before {
+			display: none;
+		}
+
+		.persona-content-wrapper {
+			@include aspect-ratio(640px, 560px);
+			position: relative;
+			transform: none;
+		}
+
+		.persona-content {
+			@include size(100%);
+			@include coverer();
+			transform: none;
+		}
+
+		.persona {
+			width: 100%;
+			padding: 0 $sizeGrid * 2;
+		}
+
+		.persona-options,
+		.background-triangle {
+			display: none;
+		}
+
+		.slider {
+			display: block;
+		}
+
+		.component-paginator-dashed {
+			display: block;
 		}
 	}
 }
