--- a/deploy/htdocs/version/src/inc/style/asset/_asset.scss
+++ b/deploy/htdocs/version/src/inc/style/asset/_asset.scss
@@ -10,6 +10,7 @@
 @import 'scrollbar';
 @import 'link';
 @import 'sentence-animation';
+@import 'loader';
 
 @import 'infinite-carousel/infinite-carousel';
 
