Add Apply Button in filterMenu.

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-filter-content/block-filter-content.html
@@ -5,7 +5,8 @@
 			onComplete: $root.controller.callbackCounter.get($root.controller.handleFilterMenuReady.bind($root.controller)),
 			options: {
 				filters: filters,
-				label: filterLabel
+				label: filterLabel,
+				applyLabel: applyLabel
 			}
 		} --><!-- /ko -->
 
