--- a/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
+++ b/deploy/htdocs/version/src/inc/style/component/_filter-menu.scss
@@ -18,7 +18,6 @@
 	.filter-label {
 		position: relative;
 		background-color: $colorTertiary;
-		padding-left: $sizeGrid;
 		width: $sizeGrid*5;
 		color: white;
 		height: 100%;
@@ -27,6 +26,8 @@
 		font-size: 1.2rem;
 		line-height: $sizeGrid*2;
 		font-family: $fontOpenSans;
+		text-align: center;
+		transition: background-color 250ms ease(easeOutExpo), color 250ms ease(easeOutExpo);;
 
 		.icon {
 			position: absolute;
@@ -34,6 +35,11 @@
 			top: 50%;
 			right: $sizeGrid/1.333;
 			@include size(14px, 16px);
+		}
+
+		@include hover() {
+			background-color: white;
+			color: $colorTertiary;
 		}
 	}
 
@@ -114,14 +120,12 @@
 		@include size(100%);
 
 		.selected-tags-indicator {
-			position: absolute;
-			@include pos(50%, $sizeGrid + $sizeGrid/4, auto, auto);
-			transform: translate(0, -50%);
 			@include size($sizeGrid/2);
 			border-radius: 100%;
 			background-color: $colorTertiary;
 			color: white;
 			font: 600 1.2rem / 2rem $fontOpenSans;
+			margin-left: $sizeGrid/4;
 		}
 
 		&:before {
