Moved the sticky advertising button to be 75% from the top instead of 50%

--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-start-advertising/button-start-advertising.html
@@ -1,5 +1,7 @@
-<button class="component-button-start-advertising button" data-bind="tap: handleClick, attr: { title: title }">
+<div class="component-button-start-advertising">
 	<span class="background"></span>
-	<span class="icon" data-bind="icon: 'circle-arrow-right'"></span>
-	<span class="label">{{label}}</span>
-</button>
+	<button class="start-advertising button" data-bind="tap: handleClick, attr: { title: title }">
+		<span class="icon" data-bind="icon: 'circle-arrow-right'"></span>
+		<span class="label">{{label}}</span>
+	</button>
+</div>
