--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-hero-main/block-hero-main.html
@@ -4,50 +4,51 @@
 		onComplete: $root.controller.callbackCounter.get($root.controller.handleImageCrossfaderReady.bind($root.controller))
 	} --><!-- /ko -->
 
-	<div class="slide-content-wrapper abs-fill" data-bind="with: data.slides[0]">
+	<div class="slide-content-wrapper abs-fill">
 		<div class="background-triangle"></div>
 		<div class="secondary-background-triangle"></div>
-		<div class="tertiary-background-triangle" data-bind="visible: !$data.statistics"></div>
-		<div class="slide-content">
-			<h2 class="heading heading-01" data-bind="html: $data.heading"></h2>
+		<div class="tertiary-background-triangle" data-bind="visible: !$data.hasStatistics"></div>
+		<!-- ko foreach: data.slides -->
+			<div class="slide-content" >
+				<h2 class="heading heading-01" data-bind="html: $data.heading"></h2>
 
-			<!-- ko if: $data.paragraph -->
-				<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
-			<!-- /ko -->
+				<!-- ko if: $data.paragraph -->
+					<p class="copy copy-01" data-bind="html: $data.paragraph"></p>
+				<!-- /ko -->
 
-			<!-- ko if: $data.link -->
-				<!-- ko component: {
-					name: 'button/button-circle-arrow',
-					onComplete: $root.controller.callbackCounter.get(),
-					options: {
-						action: link,
-						arrowDirection: $root.Direction.DOWN,
-						arrowPosition: $root.Alignment.LEFT,
-						size: $root.ButtonSize.LARGE
-					}
-				} --><!-- /ko -->
-			<!-- /ko -->
-		</div>
-
-		<!-- ko with: $data.statistics -->
-			<div class="statistics-wrapper">
-				<h3 class="heading heading-07" data-bind="html: $data.heading"></h3>
-				<div class="statistics" data-bind="foreach: $data.stats">
-					<div class="statistic">
-						<h4 class="heading heading-08">
-							<span data-bind="html: $data.heading"></span><br/>
-							<strong data-bind="html: $data.description"></strong>
-						</h4>
-						<!-- ko component: {
-							name: 'percentage-loader',
-							onComplete: $root.controller.callbackCounter.get(),
-							options: {
-								percentage: $data.value
-							}
-						} --><!-- /ko -->
+				<!-- ko if: $data.link -->
+					<!-- ko component: {
+						name: 'button/button-circle-arrow',
+						onComplete: $root.controller.callbackCounter.get(),
+						options: {
+							action: link,
+							arrowDirection: $root.Direction.DOWN,
+							arrowPosition: $root.Alignment.LEFT,
+							size: $root.ButtonSize.LARGE
+						}
+					} --><!-- /ko -->
+				<!-- /ko -->
+			</div>
+			<!-- ko with: $data.statistics -->
+				<div class="statistics-wrapper">
+					<h3 class="heading heading-07" data-bind="html: $data.heading"></h3>
+					<div class="statistics" data-bind="foreach: $data.stats">
+						<div class="statistic">
+							<h4 class="heading heading-08">
+								<span data-bind="html: $data.heading"></span><br/>
+								<strong data-bind="html: $data.description"></strong>
+							</h4>
+							<!-- ko component: {
+								name: 'percentage-loader',
+								onComplete: $root.controller.callbackCounter.get(),
+								options: {
+									percentage: $data.value
+								}
+							} --><!-- /ko -->
+						</div>
 					</div>
 				</div>
-			</div>
+			<!-- /ko -->
 		<!-- /ko -->
 	</div>
 
