Add active state indicator for the path to purchase

--- a/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-path-to-purchase.scss
@@ -34,14 +34,20 @@
 
 		@include hover() {
 			color: $colorLightGrey;
+		}
 
-			//.step-content {
-			//	background: $colorLightGrey;
-			//}
-			//
-			//.step-edge {
-			//	color: $colorLightGrey;
-			//}
+		&.is-active {
+			color: $colorPrimary;
+
+			.step-content {
+				.copy {
+					color: $colorWhite;
+				}
+			}
+
+			@include hover() {
+				color: $colorPrimary;
+			}
 		}
 
 		&:after {
