--- a/deploy/htdocs/version/src/inc/style/component/block/_block-program-module.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-program-module.scss
@@ -1,7 +1,8 @@
 .component-block-program-module {
 	font-size: 0;
 
-	.component-program-module-item {
-
+	.program-module-item {
+		@include size(25%, auto);
+		display: inline-block;
 	}
 }
