--- a/deploy/htdocs/version/src/inc/script/app/component/program-module-item/program-module-item.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/program-module-item/program-module-item.html
@@ -51,6 +51,16 @@
 				<!-- /ko -->
 
 				<p class="paragraph copy-01 copy" data-bind="html: paragraph"></p>
+
+				<div class="tags" data-bind="foreach: tags">
+					<!-- ko component: {
+						name: 'button/button-tag',
+						onComplete: $root.controller.callbackCounter.get(),
+						options: {
+							action: $data
+						}
+					} --><!-- /ko -->
+				</div>
 			</div>
 		</div>
 	</div>
