--- a/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/button/button-main/button-main.html
@@ -1,6 +1,12 @@
-<a class="component-button-main button" data-bind="tap: handleClick, attr: { title: title }">
+<a class="component-button-main button" data-bind="attr: { title: title }, events: [
+	[MouseEventHelper.CLICK, $root.handleClick.bind($root)],
+	[MouseEventHelper.MOUSEENTER, $root.handleMouseEnter.bind($root)],
+	[MouseEventHelper.MOUSELEAVE, $root.handleMouseLeave.bind($root)]
+]">
 	<span class="label">{{label}}</span>
 	<svg width="100%" height="100%" class="abs-fill" preserveAspectRatio="none">
-		<rect x="0.5" y="0.5" vector-effect="non-scaling-stroke"></rect>
+		<rect class="background" x="0.5" y="0.5" vector-effect="non-scaling-stroke"></rect>
+		<rect class="hover-stroke" x="0.5" y="0.5" vector-effect="non-scaling-stroke"></rect>
 	</svg>
+	<span class="stripe"></span>
 </a>
