--- a/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block/_block-article-teaser.scss
@@ -20,11 +20,6 @@
 
 		.copy-01 {
 			margin-bottom: $sizeGrid;
-			transition: opacity .2s ease(easeOut);
-		}
-
-		.tags {
-			transition: opacity .2s ease(easeOut);
 		}
 
 		.component-button-tag {
@@ -36,12 +31,10 @@
 
 	figure {
 		clip: rect(0, $sizeGrid * 16, $sizeGrid * 8, $sizeGrid * 8);
-		transition: clip .2s ease(easeOut);
 
 		img {
-			transform: translateX(10%);
-			transition: transform .2s ease(easeOut);
 			width: 100%;
+			transform: translateX(10%);
 		}
 
 		&:after {
@@ -53,24 +46,44 @@
 		}
 	}
 
-	@include hover() {
+	&.transition-in-complete {
 		figure {
-			clip: rect(0, $sizeGrid * 16, $sizeGrid * 8, 0);
-
-			&:after {
-				transform: translateX(-$sizeGrid * 9);
-				opacity: 0;
-			}
-
-			img {
-				transform: translateX(0);
-			}
+			transition: clip .2s ease(easeOut);
 		}
 
 		aside {
-			.tags,
 			.copy {
-				opacity: 0;
+				transition: opacity .2s ease(easeOut);
+			}
+
+			.tags {
+				transition: opacity .2s ease(easeOut);
+			}
+		}
+
+		img {
+			transition: transform .2s ease(easeOut);
+		}
+
+		@include hover() {
+			figure {
+				clip: rect(0, $sizeGrid * 16, $sizeGrid * 8, 0);
+
+				&:after {
+					transform: translateX(-$sizeGrid * 9);
+					opacity: 0;
+				}
+
+				img {
+					transform: translateX(0);
+				}
+			}
+
+			aside {
+				.tags,
+				.copy {
+					opacity: 0;
+				}
 			}
 		}
 	}
