update hover state for the article teaser

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-article-teaser/block-article-teaser.html
@@ -5,6 +5,8 @@
 				image: data.image,
 				state: $root.deviceState()
 			}" />
+
+			<span class="hover-icon" data-bind="icon: 'circle-arrow-right'"></span>
 	</figure>
 	<aside>
 		<h2 class="heading heading-07" data-bind="html: data.heading"></h2>
