Updated more transitions

--- a/deploy/htdocs/version/src/inc/script/app/component/audio-player/audio-player.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/audio-player/audio-player.html
@@ -8,7 +8,7 @@
 			}
 		}
 	} --><!-- /ko -->
-	<div class="wave-form">
-
+	<div class="wave-form-wrapper">
+		<div class="wave-form"></div>
 	</div>
 </div>
