--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-blog-post/block-blog-post.html
@@ -3,7 +3,7 @@
 	<div class="site-frame">
 		<p class="date copy" data-bind="html: date"></p>
 
-		<h2 class="heading-02 heading" data-bind="html: heading"></h2>
+		<h2 class="main-heading heading-02 heading" data-bind="html: heading"></h2>
 
 		<div class="blog-post-bar">
 
