Added basic mapbox

--- a/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
+++ b/deploy/htdocs/version/src/inc/script/app/component/block/block-market-map/block-market-map.html
@@ -1,7 +1,7 @@
 <div class="component-block-market-map" data-bind="with: data">
 
-	<div class="map-box abs-fill">
-		<img class="abs-fill fit-cover" src="data/image/market-map/map.jpg " />
+	<div class="map-box abs-fill" id="js-map">
+		<!--<img class="abs-fill fit-cover" src="data/image/market-map/map.jpg " />-->
 	</div>
 
 	<div class="selected-value copy-03" data-bind="
